Update dependencies of docs website

--- a/docs-src/pages/API.mdx
+++ b/docs-src/pages/API.mdx
@@ -1,11 +1,10 @@
 ---
-title: 'API'
+title: "API"
 ---
 
-import Readme from '../../README.md'
-import Section from '../components/Section.jsx'
+import Readme from "../assets/README.md";
+import Section from "../components/Section.jsx";
 
 # API
 
 <Section markdown={Readme} type="h2" name="API Documentation" removeHeading />
-
