--- a/docs-src/pages/index.mdx
+++ b/docs-src/pages/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Demo'
+title: "Demo"
 ---
 
-import Callout from 'nextra-theme-docs/callout'
-import VerificationInput from '../../lib/index.js'
+import { Callout } from "nextra-theme-docs";
+import VerificationInput from "../../lib/index.js";
 
 # Demo
 
@@ -15,7 +15,7 @@ import VerificationInput from '../../lib/index.js'
 
 Default configuration without specifying any props.
 
-```jsx
+```jsx copy
 <VerificationInput />
 ```
 
@@ -23,15 +23,12 @@ Default configuration without specifying any props.
 
 <br />
 
-<VerificationInput validChars="0-9" inputProps={{type: "tel"}} />
+<VerificationInput validChars="0-9" inputProps={{ type: "tel" }} />
 
 Accept only numbers and use numpad on mobile devices.
 
-```jsx
-<VerificationInput
-  validChars="0-9"
-  inputProps={{type: "tel"}}
-/>
+```jsx copy
+<VerificationInput validChars="0-9" inputProps={{ type: "tel" }} />
 ```
 
 ## Custom length
@@ -42,7 +39,7 @@ Accept only numbers and use numpad on mobile devices.
 
 Configure the input to accept 5 digits.
 
-```jsx
+```jsx copy
 <VerificationInput length={5} />
 ```
 
@@ -54,7 +51,7 @@ Configure the input to accept 5 digits.
 
 Use any character as placeholder (empty string for no placeholder).
 
-```jsx
+```jsx copy
 <VerificationInput placeholder="_" />
 ```
 
@@ -67,13 +64,12 @@ Use any character as placeholder (empty string for no placeholder).
 Let iOS read OTP codes from text message notifications (see <a
   href="https://developer.apple.com/documentation/security/password_autofill/enabling_password_autofill_on_an_html_input_element"
   target="_blank">docs</a>).
+
 <Callout>
-  In order to test this, you need to send a text message containing e.g.
-  `Code: 123456` to your phone.
+  In order to test this, you need to send a text message containing e.g. `Code:
+  123456` to your phone.
 </Callout>
 
-```jsx
-<VerificationInput
-  inputProps={{ autoComplete: "one-time-code" }}
-/>
+```jsx copy
+<VerificationInput inputProps={{ autoComplete: "one-time-code" }} />
 ```
