--- a/docs-src/pages/styling.mdx
+++ b/docs-src/pages/styling.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Styling'
+title: "Styling"
 ---
 
-import VerificationInput from '../../lib/index.js'
-import Readme from '../../README.md'
-import Section from '../components/Section.jsx'
+import VerificationInput from "../../lib/index.js";
+import Readme from "../assets/README.md";
+import Section from "../components/Section.jsx";
 
 # Styling
 
