Update nextra and remove workaround

--- a/docs-src/pages/API.mdx
+++ b/docs-src/pages/API.mdx
@@ -2,7 +2,7 @@
 title: "API"
 ---
 
-import Readme from "../assets/README.md";
+import Readme from "../../README.md";
 import Section from "../components/Section.jsx";
 
 # API
