--- a/docs-src/pages/styling.mdx
+++ b/docs-src/pages/styling.mdx
@@ -3,7 +3,7 @@ title: "Styling"
 ---
 
 import VerificationInput from "../../lib/index.js";
-import Readme from "../assets/README.md";
+import Readme from "../../README.md";
 import Section from "../components/Section.jsx";
 import { Callout } from "nextra-theme-docs";
 
