--- a/docs-src/pages/index.mdx
+++ b/docs-src/pages/index.mdx
@@ -23,29 +23,24 @@ Default configuration without specifying any props.
 
 <br />
 
-<VerificationInput validChars="0-9" inputProps={{ type: "tel" }} />
+<VerificationInput validChars="0-9" inputProps={{ inputMode: "numeric" }} />
 
 Accept only numbers and use numpad on mobile devices.
 
 ```jsx copy
-<VerificationInput validChars="0-9" inputProps={{ type: "tel" }} />
+<VerificationInput validChars="0-9" inputProps={{ inputMode: "numeric" }} />
 ```
 
 ## Password mode
 
 <br />
 
-To masked the input, you can use the `passwordMode` option. This will set the input type as `password` and masked the values. 
+<VerificationInput passwordMode={true} />
+
+Hide the input value. This will also set the input type as `password`.
 
 ```jsx copy
 <VerificationInput passwordMode={true} />
-```
-
-To use Numbers only and password mode, you can use the following snippet where we set the `validChars` 
-and `inputmode` to `decimal` (this enforce mobile devices to use the number keypad).
-
-```jsx copy
-<VerificationInput passwordMode={true} validChars="0-9" inputProps={{ inputmode: "decimal" }} />
 ```
 
 ## Custom length
