--- a/docs-src/pages/index.mdx
+++ b/docs-src/pages/index.mdx
@@ -63,6 +63,15 @@ Configure the input to accept 5 digits.
 
 Use any character as placeholder (empty string for no placeholder).
 
+## Custom seperators
+
+<br />
+
+<VerificationInput seperator=":" seperatorIndices={[2]} />
+
+Use any character as seperator empty string for spacing only. Specify the indices
+where seperators should be placed.
+
 ```jsx copy
 <VerificationInput placeholder="_" />
 ```
